--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build Vite app
-        run: npm run build --mode production
+        run: npm run build
 
       - name: Deploy to Azure Static Web App
         uses: Azure/static-web-apps-deploy@v1
