--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build Vite app
         run: npm run build --mode pr
+        working-directory: ./
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL_PROD }}
 
