--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -22,8 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build Vite app
-        run: npm run build --mode pr
-        working-directory: ./
+        run: npm run build
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL_PROD }}
 
