--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Debug Environment Variable
+        run: |
+          echo "VITE_API_BASE_URL_PROD is set to: ${VITE_API_BASE_URL}"
+        env: # This env block is crucial for the echo command to see the variable
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL_PROD }}
+
       - name: Build Vite app
         run: npm run build
         env:
