--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -23,8 +23,10 @@ jobs:
 
       - name: Debug Environment Variable
         run: |
-          echo "VITE_API_BASE_URL_PROD is set to: ${VITE_API_BASE_URL}"
-        env: # This env block is crucial for the echo command to see the variable
+          echo "Value of VITE_API_BASE_URL_PROD from secrets: ${{ secrets.VITE_API_BASE_URL_PROD }}"
+          # Also check if it's available as VITE_API_BASE_URL for the build step
+          echo "Value of VITE_API_BASE_URL in this context: $VITE_API_BASE_URL"
+        env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL_PROD }}
 
       - name: Build Vite app
