--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -57,3 +57,4 @@ jobs:
           app_location: "/"
           api_location: ""
           output_location: "dist"
+          app_build_command: "nvm install 20 && nvm use 20 && npm ci && npm run build"
