--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+    "engines": {
+    "node": ">=20.0.0 <23.0.0", // This is the key. Make sure it's correct.
+    "npm": ">=9.0.0"
   }
 }
